--- a/Web-App-Frontend/src/App.css
+++ b/Web-App-Frontend/src/App.css
@@ -5,6 +5,7 @@
     justify-content: center;
     height: 100vh;
     text-align: center;
+    background: linear-gradient(135deg, #fcec61, #f8f8f8);
 }
 
 .component-box {
