--- a/Web-App-Frontend/src/component/Download/Download.css
+++ b/Web-App-Frontend/src/component/Download/Download.css
@@ -19,3 +19,11 @@
  padding: 10px;
  font-family:"Prompt", sans-serif;
 }
+.download-link{
+    text-decoration: none;
+    background-color: #ffffff;
+}
+.download-link:hover{
+    background-color: black;
+    color: #ffffff;
+}
