--- a/Web-App-Frontend/src/component/Upload/Upload.css
+++ b/Web-App-Frontend/src/component/Upload/Upload.css
@@ -5,5 +5,26 @@
     text-align: center;
     font-family:"Prompt", sans-serif;
 }
+.preview-container {
+    width: 100%;  
+    max-width: 200px;  
+    height: 200px;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; 
+    border: 1px solid #ccc;
+    background-color: #fff; 
+}
+
+.preview-image {
+    width: 100%;  
+    height: auto; 
+    max-width: 100%;  
+    max-height: 100%; 
+    object-fit: contain;  
+}
+
+
 
 
