--- a/Web-App-Frontend/src/component/Upload/Upload.css
+++ b/Web-App-Frontend/src/component/Upload/Upload.css
@@ -18,13 +18,21 @@
 }
 
 .preview-image {
-    width: 100%;  
+    width: 80%;  
     height: auto; 
-    max-width: 100%;  
-    max-height: 100%; 
+    max-width: 80%;  
+    max-height: 80%; 
     object-fit: contain;  
 }
 
+.preview-image:hover {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    cursor: pointer;
+}
 
 
 
