--- a/Web-App-Frontend/src/component/Register/Register.css
+++ b/Web-App-Frontend/src/component/Register/Register.css
@@ -6,5 +6,7 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     text-align: center;
     width: 400px;
-    margin: auto;
+    margin-top: 12rem;
+    margin-bottom: 12rem;
+    height: 100%;
 }
