--- a/Web-App-Frontend/src/component/Upload/Upload.css
+++ b/Web-App-Frontend/src/component/Upload/Upload.css
@@ -7,7 +7,6 @@
 }
 .preview-container {
     width: 100%;  
-    max-width: 200px;  
     height: 200px;  
     display: flex;
     justify-content: center;
@@ -15,6 +14,7 @@
     overflow: hidden; 
     border: 1px solid #ccc;
     background-color: #fff; 
+    text-align: center;
 }
 
 .preview-image {
